--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opr"
-version = "0.1.0"
+version = "v0.1.1"
 description = "opinionated python release manager"
 readme = "README.md"
 requires-python = ">=3.10"
